@@ -1,60 +1,66 @@
 package uk.gov.functional;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.jcabi.http.Request;
-import com.jcabi.http.Response;
-import com.jcabi.http.request.JdkRequest;
-import org.junit.After;
-import org.junit.Before;
+import io.dropwizard.testing.ConfigOverride;
+import io.dropwizard.testing.ResourceHelpers;
+import io.dropwizard.testing.junit.DropwizardAppRule;
+import org.glassfish.jersey.client.JerseyClient;
+import org.glassfish.jersey.client.JerseyClientBuilder;
+import org.junit.Rule;
 import org.junit.Test;
-import uk.gov.Application;
+import org.junit.rules.ExternalResource;
+import org.junit.rules.RuleChain;
+import org.junit.rules.TestRule;
+import uk.gov.MintApplication;
 import uk.gov.mint.CanonicalJsonMapper;
 import uk.gov.store.EntriesQueryDAO;
-import uk.gov.store.EntriesUpdateDAO;
-import uk.gov.store.HighWaterMarkDAO;
 
-import java.io.InputStream;
-import java.sql.DriverManager;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
+import javax.ws.rs.client.Entity;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+import java.io.IOException;
+import java.sql.*;
 import java.util.Collections;
 import java.util.List;
-import java.util.Properties;
 
-import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.core.Is.is;
+import static org.hamcrest.core.IsEqual.equalTo;
 import static org.junit.Assert.assertThat;
 
+
 public class FunctionalTest {
-    private java.sql.Connection pgConnection;
-    private Application application;
-    private TestKafkaCluster testKafkaCluster;
-    private Properties properties;
+    private static String postgresConnectionString = "jdbc:postgresql://localhost:5432/ft_mint";
+    public static TestKafkaCluster testKafkaCluster;
 
-    @Before
-    public void setup() throws Exception {
-        properties = new Properties();
-        String configFilename = FunctionalTest.class.getResource("/test-application.properties").getFile();
-        InputStream resourceAsStream = FunctionalTest.class.getResourceAsStream("/test-application.properties");
-        properties.load(resourceAsStream);
+    @Rule
+    public TestRule ruleChain = RuleChain.
+            outerRule(
+                    new ExternalResource() {
+                        @Override
+                        protected void before() throws Throwable {
+                            testKafkaCluster = new TestKafkaCluster(6000);
+                        }
 
-        pgConnection = DriverManager.getConnection(properties.getProperty("postgres.connection.string"));
+                        @Override
+                        protected void after() {
+                            try {
+                                testKafkaCluster.stop();
+                            } catch (IOException e) {
+                                throw new RuntimeException(e);
+                            }
+                        }
+                    }
+            ).
+            around(
+                    new CleanDatabaseRule(postgresConnectionString)
+            ).
+            around(
+                    new DropwizardAppRule<>(MintApplication.class,
+                            ResourceHelpers.resourceFilePath("test-config.yaml"),
+                            ConfigOverride.config("database.url", postgresConnectionString))
+            );
 
-        cleanDatabase();
-
-        testKafkaCluster = new TestKafkaCluster(6000); // must match test-application.properties
-
-        application = new Application("config.file=" + configFilename);
-        application.startup();
-    }
-
-    @After
-    public void tearDown() throws Exception {
-        application.shutdown();
-        testKafkaCluster.stop();
-    }
 
     @Test
     public void checkMessageIsConsumedAndStoredInDatabase() throws Exception {
@@ -66,9 +72,8 @@ public class FunctionalTest {
         JsonNode messageJson = canonicalJsonMapper.readFromBytes(message);
 
         waitForMessageToBeConsumed();
-        send(
-                javaslang.collection.List.of(messageString)
-        );
+
+        send(Collections.singletonList(messageString));
 
         waitForMessageToBeConsumed();
 
@@ -89,25 +94,21 @@ public class FunctionalTest {
         assertThat(messages, is(Collections.singletonList(actualString)));
     }
 
-    private void send(javaslang.collection.List<String> payload) {
+    private void send(List<String> payload) {
         try {
-            final String mintUrl = properties.getProperty("mintUrl");
-            Response r = new JdkRequest(mintUrl)
-                    .method(Request.POST)
-                    .body()
-                    .set(payload.join("\n"))
-                    .back()
-                    .fetch();
-            if (r.status() != 200)
-                System.err.println("Unexpected result: " + r.body());
+            JerseyClient jerseyClient = JerseyClientBuilder.createClient();
+            Response response = jerseyClient.target("http://localhost:4568/load").request(MediaType.APPLICATION_JSON_TYPE).buildPost(Entity.json(String.join("\n", payload))).invoke();
+            if (response.getStatus() != 200)
+                System.err.println("Unexpected result: " + response.readEntity(String.class));
             else
-                System.out.println("Loaded " + payload.length() + " entries...");
+                System.out.println("Loaded " + payload.size() + " entries...");
         } catch (Exception e) {
             System.err.println("Error occurred sending data to mint: " + e);
         }
     }
 
     private byte[] tableRecord() throws SQLException {
+        Connection pgConnection = DriverManager.getConnection(postgresConnectionString, "postgres", "");
         try (Statement statement = pgConnection.createStatement()) {
             statement.execute("SELECT ENTRY FROM " + EntriesQueryDAO.tableName);
             ResultSet resultSet = statement.getResultSet();
@@ -116,13 +117,6 @@ public class FunctionalTest {
     }
 
     private void waitForMessageToBeConsumed() throws InterruptedException {
-        Thread.sleep(500);
-    }
-
-    private void cleanDatabase() throws SQLException {
-        try (Statement statement = pgConnection.createStatement()) {
-            statement.execute("DROP TABLE IF EXISTS " + EntriesUpdateDAO.tableName);
-            statement.execute("DROP TABLE IF EXISTS " + HighWaterMarkDAO.tableName);
-        }
+        Thread.sleep(3000);
     }
 }
